# django-vue-utilities

./: MANIFEST.in  README.rst  conf.py  manage.py  pyproject.toml  setup.cfg
django_vue_utilities/templatetags/: vue_utils.py
django_vue_utilities/tests/: __init__.py  settings.py
docs/: Makefile  conf.py  documentation.rst  index.rst  install.rst  make.bat  settings.rst  tests.rst  usage.rst
