[metadata]
name = django-vue-utils
version = 0.1.4
description = Utilities and helpers for integrating Django + Vue
long_description = file: README.rst
url = https://github.com/ilikerobots/django-vue-utils
author = Mike Hoolehan
author_email = mike@starheightmedia.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: JavaScript

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 3.2  
